# SMSForwardingBot

./: README.md  pyproject.toml  wvdial.conf
config/: config.ini
