[tool.poetry]
name = "smsforwardingbot"
version = "1.0.1"
description = ""
authors = ["SystemzeusInc","zinntikumugai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "3.5"
psutil = "5.8.0"
schedule = "1.1.0"
slack-sdk = "3.18.3"
slack-bolt = "1.15.0"
gsm0338 = "1.0.0"
jinja2 = "3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
